<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/madicineName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/medicineName"
        android:textColor="#50575d"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/madicineDasages"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/medicineDasages"
        android:textColor="#50575d"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/intekeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <CheckBox
            android:id="@+id/checkTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MedicineTaken" />

        <CheckBox
            android:id="@+id/checkNotTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MedicineNotTaken" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cancelAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="cancelAlarm"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/madicineDate"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/medicineDate"
            android:textColor="#50575d"
            android:textSize="15sp" />

        <Button
            android:id="@+id/madicineTime"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/medicineTime"
            android:textColor="#50575d"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttomSave"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/save"
        android:textColor="#50575d"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttomShowAllMissedReport"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/showAllMissedMedicines"
        android:textColor="#50575d"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttomShowAllTakenReport"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/showAllTakenMedicines"
        android:textColor="#50575d"
        android:textSize="15sp" />

</LinearLayout>